<?xml version="1.0"?>
<package format="2">
  <name>deep2d_ros</name>
  <version>1.0.0</version>
  <description>
    ROS wrapper for Deep2D library.
  </description>
  <url type="repository">https://github.com/ehuang3/deep2d_ros</url>
  <maintainer email="erich1@andrew.cmu.edu">Eric Huang</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>git</build_depend>
  <build_depend>message_generation</build_depend>
  <depend>cgal</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>libopencv-dev</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>apriltagscpp</depend>
  <depend>yaml-cpp</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
